# sparkki

./: .dockerignore  .env.example  .gitignore  DESIGN_SYSTEM.md  DESIGN_SYSTEM_REFINE.md  Dockerfile  FEATURES.md  README.md  ROADMAP.md  docker-compose.yml  lighthouserc.json  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vercel.json
.github/workflows/: ci.yml  deploy-production.yml  synthetic-monitoring.yml
app/: global-error.tsx  globals.css  layout.tsx  robots.ts  sitemap.ts
app/[locale]/: page.tsx  (+4 more)
apps/verso-checker/src-tauri/: Cargo.toml  tauri.conf.json
apps/verso-checker/src-tauri/src/: main.rs
components/: BackgroundCanvas.tsx  Footer.tsx  FooterNavLinks.tsx  NavBar.tsx
docs/: api-public.md  calendly-booking.md  operations.md  phases-implementation-notes.md  repository-layout.md  site-pages.md
e2e/: a11y-axe.spec.ts  admin-locale.spec.ts  admin-login.spec.ts  computer-lookup-catalog.spec.ts  experience-pages.spec.ts  home-clarity.spec.ts  laptop-specs-ai.spec.ts  order-lookup.spec.ts  smoke.spec.ts  support-contact.spec.ts  ux-flow.spec.ts  wizard-order.spec.ts
i18n/: routing.ts
lib/: admin-audit.ts  auth-options.ts  background-nav.ts  checkout-thanks.ts  email.ts  laptop-specs.ts  pricing.ts  public-order.ts  rate-limit.ts  require-admin.ts  site-url.ts  stripe-line-items.ts  try-linux-novnc.ts
messages/: en.json  fi.json
prisma/: schema.prisma  seed.ts
scripts/: build-reference-laptops.ts  deploy-lab.sh  docker-build-web.sh  lab-stack-up.sh
types/: next-auth.d.ts
(+129 files in other folders)
