[package]
name = "verso-checker"
version = "0.1.0"
description = "Verso Checker — local compatibility check (same logic as the web app)"
authors = ["Verso"]
edition = "2021"

[lib]
name = "verso_checker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
